--- a/hat-editor/Storyboards/EditPack.storyboard
+++ b/hat-editor/Storyboards/EditPack.storyboard
@@ -19,14 +19,24 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="h5A-WC-Lf7">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="100"/>
+                                <rect key="frame" x="0.0" y="20" width="375" height="100"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="I5M-Tb-eZQ">
+                                        <rect key="frame" x="166" y="20" width="42" height="21"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
+                                    <constraint firstItem="I5M-Tb-eZQ" firstAttribute="top" secondItem="h5A-WC-Lf7" secondAttribute="top" constant="20" symbolic="YES" id="6ym-OX-DEh"/>
                                     <constraint firstAttribute="height" constant="100" id="AYY-pw-3rE"/>
+                                    <constraint firstItem="I5M-Tb-eZQ" firstAttribute="centerX" secondItem="h5A-WC-Lf7" secondAttribute="centerX" id="DeE-IX-zrZ"/>
                                 </constraints>
                             </view>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="oEz-Kf-gMl">
-                                <rect key="frame" x="0.0" y="100" width="375" height="567"/>
+                                <rect key="frame" x="0.0" y="120" width="375" height="547"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="PhraseTableViewCell" id="0zL-69-QZh" customClass="PhraseTableViewCell" customModule="hat_editor" customModuleProvider="target">
@@ -63,15 +73,16 @@
                         <constraints>
                             <constraint firstItem="oEz-Kf-gMl" firstAttribute="leading" secondItem="Xn0-ya-rB8" secondAttribute="leading" id="9ir-fk-zef"/>
                             <constraint firstItem="Xn0-ya-rB8" firstAttribute="bottom" secondItem="oEz-Kf-gMl" secondAttribute="bottom" id="B9b-lm-g80"/>
-                            <constraint firstItem="h5A-WC-Lf7" firstAttribute="top" secondItem="V5C-Na-b1i" secondAttribute="top" id="ERE-Sn-jgc"/>
                             <constraint firstItem="h5A-WC-Lf7" firstAttribute="leading" secondItem="Xn0-ya-rB8" secondAttribute="leading" id="JGu-gB-JZ7"/>
                             <constraint firstItem="Xn0-ya-rB8" firstAttribute="trailing" secondItem="h5A-WC-Lf7" secondAttribute="trailing" id="Tml-iN-cTN"/>
+                            <constraint firstItem="Xn0-ya-rB8" firstAttribute="top" secondItem="h5A-WC-Lf7" secondAttribute="top" id="cin-Kn-88b"/>
                             <constraint firstItem="Xn0-ya-rB8" firstAttribute="trailing" secondItem="oEz-Kf-gMl" secondAttribute="trailing" id="gFa-CH-u6k"/>
                             <constraint firstItem="oEz-Kf-gMl" firstAttribute="top" secondItem="h5A-WC-Lf7" secondAttribute="bottom" id="zCS-RV-ECj"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="Xn0-ya-rB8"/>
                     </view>
                     <connections>
+                        <outlet property="packTitleLabel" destination="I5M-Tb-eZQ" id="oAs-cl-1zQ"/>
                         <outlet property="tableView" destination="oEz-Kf-gMl" id="9s7-MU-MKd"/>
                     </connections>
                 </viewController>
