--- a/hat-editor/Storyboards/EditPack.storyboard
+++ b/hat-editor/Storyboards/EditPack.storyboard
@@ -6,6 +6,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -19,47 +20,113 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="h5A-WC-Lf7">
-                                <rect key="frame" x="0.0" y="20" width="375" height="100"/>
+                                <rect key="frame" x="0.0" y="20" width="375" height="69"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="I5M-Tb-eZQ">
-                                        <rect key="frame" x="166" y="20" width="42" height="21"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <rect key="frame" x="156.5" y="20" width="61.5" height="29"/>
+                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="24"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                 </subviews>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.10000000000000001" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstItem="I5M-Tb-eZQ" firstAttribute="top" secondItem="h5A-WC-Lf7" secondAttribute="top" constant="20" symbolic="YES" id="6ym-OX-DEh"/>
-                                    <constraint firstAttribute="height" constant="100" id="AYY-pw-3rE"/>
                                     <constraint firstItem="I5M-Tb-eZQ" firstAttribute="centerX" secondItem="h5A-WC-Lf7" secondAttribute="centerX" id="DeE-IX-zrZ"/>
+                                    <constraint firstAttribute="bottom" secondItem="I5M-Tb-eZQ" secondAttribute="bottom" constant="20" symbolic="YES" id="F12-wP-d9l"/>
                                 </constraints>
                             </view>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="oEz-Kf-gMl">
-                                <rect key="frame" x="0.0" y="120" width="375" height="547"/>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="100" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="oEz-Kf-gMl">
+                                <rect key="frame" x="0.0" y="89" width="375" height="578"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="PhraseTableViewCell" id="0zL-69-QZh" customClass="PhraseTableViewCell" customModule="hat_editor" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="PhraseTableViewCell" rowHeight="100" id="0zL-69-QZh" customClass="PhraseTableViewCell" customModule="hat_editor" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="100"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="0zL-69-QZh" id="GD4-qS-AjO">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="100"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Phrase" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tOr-Ys-4PT">
-                                                    <rect key="frame" x="161" y="11.5" width="53.5" height="20.5"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <rect key="frame" x="160" y="4" width="56" height="26.5"/>
+                                                    <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" text="Description." textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XdL-0q-5ec">
+                                                    <rect key="frame" x="15" y="34.5" width="345" height="17"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <stackView opaque="NO" contentMode="scaleToFill" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="hIE-BQ-UAI">
+                                                    <rect key="frame" x="15" y="55.5" width="345" height="40"/>
+                                                    <subviews>
+                                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7xb-6D-j2V" customClass="RoundedButton" customModule="hat_editor" customModuleProvider="target">
+                                                            <rect key="frame" x="0.0" y="0.0" width="109.5" height="40"/>
+                                                            <color key="backgroundColor" red="1" green="0.14913141730000001" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                            <state key="normal" title="Button"/>
+                                                            <userDefinedRuntimeAttributes>
+                                                                <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                                                    <real key="value" value="4"/>
+                                                                </userDefinedRuntimeAttribute>
+                                                            </userDefinedRuntimeAttributes>
+                                                            <connections>
+                                                                <action selector="reject" destination="0zL-69-QZh" eventType="touchUpInside" id="Wwg-a5-lgK"/>
+                                                            </connections>
+                                                        </button>
+                                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="DSl-dE-3lF" customClass="RoundedButton" customModule="hat_editor" customModuleProvider="target">
+                                                            <rect key="frame" x="117.5" y="0.0" width="110" height="40"/>
+                                                            <color key="backgroundColor" red="0.99942404029999998" green="0.98555368190000003" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                            <state key="normal" title="Button"/>
+                                                            <userDefinedRuntimeAttributes>
+                                                                <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                                                    <real key="value" value="4"/>
+                                                                </userDefinedRuntimeAttribute>
+                                                            </userDefinedRuntimeAttributes>
+                                                            <connections>
+                                                                <action selector="edit" destination="0zL-69-QZh" eventType="touchUpInside" id="mmT-03-fMn"/>
+                                                            </connections>
+                                                        </button>
+                                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0hA-ID-AAR" customClass="RoundedButton" customModule="hat_editor" customModuleProvider="target">
+                                                            <rect key="frame" x="235.5" y="0.0" width="109.5" height="40"/>
+                                                            <color key="backgroundColor" red="0.0" green="0.97680455450000003" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                            <state key="normal" title="Button"/>
+                                                            <userDefinedRuntimeAttributes>
+                                                                <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                                                    <real key="value" value="4"/>
+                                                                </userDefinedRuntimeAttribute>
+                                                            </userDefinedRuntimeAttributes>
+                                                            <connections>
+                                                                <action selector="accept" destination="0zL-69-QZh" eventType="touchUpInside" id="mXz-aI-2Rl"/>
+                                                            </connections>
+                                                        </button>
+                                                    </subviews>
+                                                    <constraints>
+                                                        <constraint firstItem="7xb-6D-j2V" firstAttribute="width" secondItem="DSl-dE-3lF" secondAttribute="width" id="AzD-5n-29s"/>
+                                                        <constraint firstItem="7xb-6D-j2V" firstAttribute="width" secondItem="0hA-ID-AAR" secondAttribute="width" id="MCS-m0-eEe"/>
+                                                        <constraint firstAttribute="height" constant="40" id="dDS-vG-jWV"/>
+                                                    </constraints>
+                                                </stackView>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstItem="tOr-Ys-4PT" firstAttribute="centerX" secondItem="GD4-qS-AjO" secondAttribute="centerX" id="0fN-2h-qpj"/>
-                                                <constraint firstItem="tOr-Ys-4PT" firstAttribute="centerY" secondItem="GD4-qS-AjO" secondAttribute="centerY" id="cAk-rc-E7l"/>
+                                                <constraint firstItem="XdL-0q-5ec" firstAttribute="top" secondItem="tOr-Ys-4PT" secondAttribute="bottom" constant="4" id="6vm-Fx-dee"/>
+                                                <constraint firstItem="tOr-Ys-4PT" firstAttribute="top" secondItem="GD4-qS-AjO" secondAttribute="top" constant="4" id="DFy-7t-XeN"/>
+                                                <constraint firstItem="hIE-BQ-UAI" firstAttribute="top" secondItem="XdL-0q-5ec" secondAttribute="bottom" constant="4" id="Dnc-tO-s6H"/>
+                                                <constraint firstItem="XdL-0q-5ec" firstAttribute="leading" secondItem="GD4-qS-AjO" secondAttribute="leadingMargin" id="G89-1i-5Df"/>
+                                                <constraint firstItem="hIE-BQ-UAI" firstAttribute="leading" secondItem="GD4-qS-AjO" secondAttribute="leadingMargin" id="HuK-5y-byZ"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="hIE-BQ-UAI" secondAttribute="trailing" id="Ofk-4s-WvZ"/>
+                                                <constraint firstItem="tOr-Ys-4PT" firstAttribute="centerX" secondItem="GD4-qS-AjO" secondAttribute="centerX" id="dKe-Kp-9Vj"/>
+                                                <constraint firstAttribute="bottom" secondItem="hIE-BQ-UAI" secondAttribute="bottom" constant="4" id="eTr-9Y-Rou"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="XdL-0q-5ec" secondAttribute="trailing" id="srS-xL-bg7"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                         <connections>
+                                            <outlet property="acceptButton" destination="0hA-ID-AAR" id="Zqt-hY-Hyj"/>
+                                            <outlet property="editButton" destination="DSl-dE-3lF" id="7YS-hy-EsX"/>
                                             <outlet property="phrase" destination="tOr-Ys-4PT" id="P1h-0P-y1G"/>
+                                            <outlet property="phraseDescription" destination="XdL-0q-5ec" id="ihA-go-I5P"/>
+                                            <outlet property="rejectButton" destination="7xb-6D-j2V" id="NDh-nZ-ba3"/>
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
