--- a/hat-editor/Storyboards/Packs.storyboard
+++ b/hat-editor/Storyboards/Packs.storyboard
@@ -35,8 +35,25 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="g5D-jf-BpA">
+                                <rect key="frame" x="0.0" y="64" width="375" height="44"/>
+                                <subviews>
+                                    <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="SbS-gl-H85">
+                                        <rect key="frame" x="318" y="6.5" width="51" height="31"/>
+                                        <connections>
+                                            <action selector="changeModeFor:" destination="kre-Hv-L7P" eventType="valueChanged" id="bMg-wm-hLQ"/>
+                                        </connections>
+                                    </switch>
+                                </subviews>
+                                <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="44" id="9z1-Ax-8E8"/>
+                                    <constraint firstItem="SbS-gl-H85" firstAttribute="centerY" secondItem="g5D-jf-BpA" secondAttribute="centerY" id="btP-zH-R0z"/>
+                                    <constraint firstAttribute="trailingMargin" secondItem="SbS-gl-H85" secondAttribute="trailing" id="qZa-2G-K8z"/>
+                                </constraints>
+                            </view>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" estimatedRowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="08S-gH-61U">
-                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
+                                <rect key="frame" x="0.0" y="108" width="375" height="559"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="PacksTableViewCell" id="fPT-oa-mZ8" customClass="PacksTableViewCell" customModule="hat_editor" customModuleProvider="target">
@@ -46,19 +63,46 @@
                                             <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FiU-qW-qks">
-                                                    <rect key="frame" x="15" y="11" width="42" height="21"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                    <nil key="textColor"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
+                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="kXS-6u-PDe" userLabel="Minimal view">
+                                                    <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                                                    <subviews>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FiU-qW-qks">
+                                                            <rect key="frame" x="8" y="11" width="42" height="21"/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                            <nil key="textColor"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                    </subviews>
+                                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                    <constraints>
+                                                        <constraint firstItem="FiU-qW-qks" firstAttribute="leading" secondItem="kXS-6u-PDe" secondAttribute="leadingMargin" id="6PR-sM-gOC"/>
+                                                        <constraint firstAttribute="height" constant="44" id="Ktt-xy-fm8"/>
+                                                        <constraint firstItem="FiU-qW-qks" firstAttribute="centerY" secondItem="kXS-6u-PDe" secondAttribute="centerY" id="OJi-he-Xoo"/>
+                                                    </constraints>
+                                                </view>
+                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="qfI-1k-hpX" userLabel="Extending view" customClass="LoadableView" customModule="hat_editor" customModuleProvider="target">
+                                                    <rect key="frame" x="0.0" y="43.5" width="375" height="44"/>
+                                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                    <color key="tintColor" white="0.0" alpha="0.10000000000000001" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="44" id="Igi-Mb-rfs"/>
+                                                    </constraints>
+                                                    <userDefinedRuntimeAttributes>
+                                                        <userDefinedRuntimeAttribute type="boolean" keyPath="isLoaded" value="NO"/>
+                                                    </userDefinedRuntimeAttributes>
+                                                </view>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstItem="FiU-qW-qks" firstAttribute="centerY" secondItem="XX6-6P-ten" secondAttribute="centerY" id="AVC-rY-PId"/>
-                                                <constraint firstItem="FiU-qW-qks" firstAttribute="leading" secondItem="XX6-6P-ten" secondAttribute="leadingMargin" id="lgT-uV-Gye"/>
+                                                <constraint firstItem="qfI-1k-hpX" firstAttribute="top" secondItem="XX6-6P-ten" secondAttribute="top" constant="44" id="6V5-91-Npf"/>
+                                                <constraint firstAttribute="trailing" secondItem="kXS-6u-PDe" secondAttribute="trailing" id="G5D-29-gdZ"/>
+                                                <constraint firstItem="kXS-6u-PDe" firstAttribute="top" secondItem="XX6-6P-ten" secondAttribute="top" id="JWH-FC-qXe"/>
+                                                <constraint firstAttribute="trailing" secondItem="qfI-1k-hpX" secondAttribute="trailing" id="Ygh-zy-Ybm"/>
+                                                <constraint firstItem="qfI-1k-hpX" firstAttribute="leading" secondItem="XX6-6P-ten" secondAttribute="leading" id="n9j-mK-nC2"/>
+                                                <constraint firstItem="kXS-6u-PDe" firstAttribute="leading" secondItem="XX6-6P-ten" secondAttribute="leading" id="qUj-vd-bCi"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                         <connections>
+                                            <outlet property="extendingView" destination="qfI-1k-hpX" id="Nyb-MR-6jo"/>
                                             <outlet property="packNameLabel" destination="FiU-qW-qks" id="62k-jd-TmG"/>
                                         </connections>
                                     </tableViewCell>
@@ -71,10 +115,13 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
+                            <constraint firstItem="g5D-jf-BpA" firstAttribute="top" secondItem="zNl-SF-C8u" secondAttribute="top" id="8Gx-1J-f7p"/>
+                            <constraint firstItem="08S-gH-61U" firstAttribute="top" secondItem="g5D-jf-BpA" secondAttribute="bottom" id="8Vw-9p-D3q"/>
                             <constraint firstItem="08S-gH-61U" firstAttribute="leading" secondItem="zNl-SF-C8u" secondAttribute="leading" id="GSI-qU-LlG"/>
                             <constraint firstItem="08S-gH-61U" firstAttribute="width" secondItem="j1A-l9-xnC" secondAttribute="width" id="UKf-Pk-EB3"/>
+                            <constraint firstItem="g5D-jf-BpA" firstAttribute="leading" secondItem="zNl-SF-C8u" secondAttribute="leading" id="bOH-Zv-hMQ"/>
                             <constraint firstItem="08S-gH-61U" firstAttribute="bottom" secondItem="zNl-SF-C8u" secondAttribute="bottom" id="jU2-H5-J7N"/>
-                            <constraint firstItem="08S-gH-61U" firstAttribute="top" secondItem="zNl-SF-C8u" secondAttribute="top" id="mIW-sp-aka"/>
+                            <constraint firstItem="zNl-SF-C8u" firstAttribute="trailing" secondItem="g5D-jf-BpA" secondAttribute="trailing" id="yNP-Tv-HgN"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="zNl-SF-C8u"/>
                     </view>
